--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,14 @@ a {
   list-style: none;
   color: #000000;
 }
-.welcome {
-  background-color: #ffffff;	
+
+.welcome-block {
+	background-color: #ffffff;
+  background-image: url('../img/background.jpg');
+  background-repeat: no-repeat;
+ 
+  background-position: top center; 
+  align-items: center;  
 }
 .features {
 	background-color: #ffffff;
