--- a/css/style.css
+++ b/css/style.css
@@ -410,7 +410,7 @@ section {
 	width: 1056 px;
 	height: 91px;
 	display: flex;
-    padding: 25px 72px;
+    padding: 25px 32px;
     border-bottom: 1px solid #e5e5e5;
 	
 }
@@ -418,12 +418,14 @@ section {
     width: 165px;
 height: 90px;
 text-align: left;
-background-color: red;}
+background-color: red;
+}
 
 
 .catalog-item-info .button {
 	width: 110px;
-	height: 27px;padding: 3px 17px;
+	height: 27px;
+	padding: 3px 17px;
 }
 
 .catalog-item-price
