--- a/css/style.css
+++ b/css/style.css
@@ -351,6 +351,51 @@ background-color: #669ec0;
     position: relative;
     cursor: pointer;
 }
+.sorting{
+	display: flex;
+    width: 1200px;
+    align-items: baseline;
+    background: #fefefe;
+    border-bottom: 1px solid #e5e5e5;
+    padding: 29px 72px 30px 72px;
+    box-sizing: border-box;
+}
+.sorting h2 {
+	    width: 165px;
+    text-align: left;
+    font-size: 21px;
+    font-weight: bold;
+    line-height: 26px;
+
+}
+.sorting-type{
+	width: 781px;
+    font-size: 12px;
+	display: flex;
+}
+.sorting ul {
+	
+}
+.sorting-type ul {
+	    display: flex;
+    list-style: none;
+    margin: 0;
+	
+}
+.sorting-list li {
+	    padding-right: 33px;
+}
+.sorting-list a {
+	    text-decoration: none;
+    color: #dadada;
+    border-bottom: 1px dotted #81b3d2;
+}
+.sorting-list .active {
+	    text-decoration: none;
+    color: #81b3d2;
+    border: none;
+}
+ 
 .catalog {
 	background-color:#ffffff;
 }
