--- a/css/style.css
+++ b/css/style.css
@@ -12,24 +12,35 @@ a {
   text-decoration: none;
   color: #000000;
 }
-.main-navigation {
-  font-size: 14px;
-  line-height: 26px;
-  color: #000000;
-  background-color: #ffffff;
-}
-.site-navigation  {
-  list-style: none;
-  color: #000000;
-}
+
 
 .welcome-block {
+	position: relative; 
 	background-color: #ffffff;
   background-image: url('../img/background.jpg');
   background-repeat: no-repeat;
+  background-position: 0 -58px;; 
+  
+  min-height: 508px;
+}
+.welcome-block:after {
+	content: "";
+  position: absolute;
+ bottom: 0;
+  left: 0;
+	background-image: url('../img/polygon.svg');
+	background-repeat: no-repeat;
  
-  background-position: top center; 
-  align-items: center;  
+	
+  height: 57px;
+  width: 1200px;
+}
+.img-welcome {
+	position: absolute;
+  left: 50%;
+  margin-left: -230px;
+  top: 76px;
+  z-index: 1;
 }
 
 .features {
@@ -470,74 +481,84 @@ body {
 .container  { 
     width: 1200px;
 	margin: 0 auto;
+	box-shadow: 0 5px 15px 0 rgba(0, 1, 1, 0.2);
 	text-align: center;
 	background-color: #ffffff;
 }
-.main-header {
-display: flex;
-width: 1200px;
-height: 57px;
-
-
+.header {
+  max-width: 1200px;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #ffffff;
+  z-index: 1;
 }
 
-
-
-
-
-
-.site-navigation {
-	width: 1200px;
-	display: flex;
-	justify-content: space-between;
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	min-height: 57px;
-	
-	
+.header-logo {
+  position: absolute;
+  z-index: 1;
+  left: 530px;
 }
 
-header ul {
-	margin: 0;
-	
-   }
- 
-
-.site-navigation li {
-	width: 240px;
-	
+.header-nav {
+  width: 1200px;
+  min-height: 57px;
+  font-weight: 700px;
+  line-height: 26px;
 }
 
-.site-navigation li:nth-child(1) {
-   margin-left: 73px;
+.header-nav-list {
+  margin: 15px 0 12px 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+}
+
+.header-nav-item {
+  width: 240px;
+}
+
+.header-nav-phrase.active {
+  color: #766357;
+  cursor: pointer;
+}
+
+.header-nav-phrase:hover,
+.header-nav-phrase:focus {
+  color: #81b3d2;
+  outline: none;
+}
+
+.header-nav-phrase:active {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.header li:nth-child(1) {
 	text-align: left;
-	padding-top: 13px;
-    padding-bottom: 17px;
+  margin-left: 73px;
 }
 
-.site-navigation li:nth-child(2) {
-	
-    text-align: center;
-	margin-bottom: 40px;
-	padding-top: 13px;
-    padding-bottom: 17px;
+.header li:nth-child(2) {
+	text-align: left;
+  margin-right: 48px;
 }
-.site-navigation li:nth-child(3) {
-	width:244px;	 
-text-align: center;
+
+.header li:nth-child(3) {
+  text-align: right;
+  margin-left: 48px;
 }
-.site-navigation li:nth-child(4) {
-	 
-text-align: center;
-padding-top: 13px;
-    padding-bottom: 17px;
+
+.header li:nth-child(4) {
+  text-align: right;
+  margin-right: 73px;
 }
-.site-navigation li:nth-child(5) {
-    margin-right: 73px;
-text-align: right;
-padding-top: 13px;
-    padding-bottom: 17px;}
+
+.header-nav a {
+  color: #000000;
+}
 	
 
 
@@ -550,11 +571,7 @@ section {
 	min-height: 510px;
 	
 }
-.block1 {	
 
-    margin-top: 72px;
-    margin-bottom: 21px;
-}
 .features{
 	width: 1200px;
 	height: 216px;
