--- a/css/style.css
+++ b/css/style.css
@@ -335,37 +335,281 @@ background-color: #669ec0;
     background-position: center;
 	
 }
-.filter {
-	    display: flex;
-    padding: 0 72px;
-    padding-top: 26px;
-    padding-bottom: 7px;
-    width: 1056px;
+.left-column {
+    margin-left: 72px;
+    padding-bottom: 5px;
+   
+    display: flex;
+    
+    flex-wrap: wrap;
 }
-.infrastruct{
-	width: 256px;
-	
+
+.left-column fieldset {
+    padding: 0;
+    margin: 0;
 }
-.housetype {
-	width: 274px;
+
+.filter-range {
+    width: 315px;
+    color: #ffffff;
+    text-transform: uppercase;
 }
-.price-filter {
-	    position: relative;
-    box-sizing: border-box;
-    width: 528px;
-    padding-left: 200px
+
+.filter-range-title {
+    padding: 0;
+    margin-bottom: 9px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 21px;
 }
-.filter h2 {
-	font-size: 16px;
-    font-weight: bold;
-    margin-top: 0px;
-    margin-bottom: 25px;
-}
-.filter input + label {
-	display: block;
-    padding-left: 40px;
+
+.price-controls {
     position: relative;
+    margin-bottom: 20px;
+    height: 34px;
+    font-size: 0;
+    border: 2px solid #fff;
+    border-radius: 2px;
+}
+
+.price-controls::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 2px;
+    height: 22px;
+    background: #ffffff;
+    
+    transform: translate(-50%, -50%);
+}
+
+.price-controls label {
+    display: inline-block;
+    font-size: 14px;
+    line-height: 21px;
+    vertical-align: top;
     cursor: pointer;
+    color: #fff;
+}
+
+.price-controls .min-price {
+    padding-left: 65px;
+    width: 91px;
+}
+
+.price-controls .max-price {
+    width: 100px;
+    padding-left: 55px;
+}
+
+.price-controls input {
+    width: 40px;
+    height: 33px;
+    margin: 0;
+    color: inherit;
+    font: inherit;
+    background: 0 0;
+    border: 0;
+}
+
+.price-controls input:hover,
+.price-controls input:active {
+    cursor: pointer;
+    background-color: transparent;
+}
+
+.price-controls input:focus {
+    outline: 3px solid #81b3d2;
+}
+
+.range-controls {
+    position: relative;
+    margin-bottom: 32px;
+}
+
+.range-controls .scale {
+    height: 2px;
+    background: rgba(255, 255, 255, 0.3);
+}
+
+.range-controls .bar {
+    width: 80%;
+    height: 2px;
+    background: #ffffff;
+}
+
+.range-toggle {
+    position: absolute;
+    top: -9px;
+    width: 4px;
+    height: 4px;
+    background: #ababab;
+    border: 8px solid #ffffff;
+    border-radius: 50%;
+    
+    box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+    cursor: pointer;
+}
+
+.range-toggle:hover {
+    
+    transform: scale(1.2);
+}
+
+.range-toggle-min {
+    left: 0;
+}
+
+.range-toggle-max {
+    left: 80%;
+}
+
+.filter-form {
+   
+    display: flex;
+   
+    justify-content: space-between;
+   
+    flex-wrap: wrap;
+    color: #fff;
+    line-height: 21px;
+}
+
+.filter-form ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.filter-form fieldset:last-child {
+    margin-left: 117px;
+}
+
+fieldset {
+ 
+    
+    display: flex;
+    
+    flex-wrap: wrap;
+    border: none;
+   
+    
+    flex-direction: column;
+}
+
+legend {
+    margin: 0;
+    padding-top: 26px;
+    padding-bottom: 26px;
+    font-weight: bold;
+    font-size: 16px;
+}
+
+.checkbox-list li {
+    margin: 0;
+    padding: 0;
+    padding-left: 30px;
+    padding-bottom: 24px;
+   
+    display: flex;
+    
+    flex-direction: row;
+    
+   
+    justify-content: flex-start;
+    
+    align-items: center;
+}
+
+.checkbox-list label {
+    position: relative;
+    padding-left: 10px;
+    display: block;
+    cursor: pointer;
+    
+    
+}
+
+.checkbox-list.house label {
+    padding-left: 13px;
+}
+
+.checkbox-input + label::before {
+    content: "";
+    position: absolute;
+    left: -30px;
+    top: -1px;
+    width: 27px;
+    height: 23px;
+    background: url(../img/checkbox-off.svg);
+    background-repeat: no-repeat;
+    background-position: top center;
+}
+
+.checkbox-input:checked + label::before {
+    content: "";
+    position: absolute;
+    top: -1px;
+    left: -28px;
+    width: 27px;
+    height: 23px;
+    background: url(../img/checkbox-on.svg);
+    background-repeat: no-repeat;
+    background-position: top center;
+}
+
+.checkbox-input:focus + label {
+    outline: 3px solid #81b3d2;
+}
+
+.checkbox-input:disabled + label{
+color:#6a6a6a
+}
+
+.checkbox-input:disabled + label::before {
+    background: url(../img/checkbox-off-dis.svg);
+    background-repeat: no-repeat;
+    background-position: top center;
+}
+
+.checkbox-input:checked:disabled + label::before {
+    background: url(../img/checkbox-on-dis.svg);
+    background-repeat: no-repeat;
+    background-position: top center;
+}
+
+.filter-range {
+    margin: 0;
+    margin-right: 75px;
+    padding: 0;
+    
+    display: flex;
+    
+    
+    justify-content: center;
+   
+    
+    flex-direction: column;
+}
+
+.show-button {
+    margin: 0 auto;
+    padding: 5px 33px 7px 35px;
+    width: 138px;
+    color: #ffffff;
+    line-height: 21px;
+    text-transform: uppercase;
+    border: 2px solid white;
+    border-radius: 3px;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.show-button:hover,
+.show-button:focus {
+    color: #000000;
+    background-color: #ffffff;
 }
 .sorting{
 	display: flex;
@@ -373,7 +617,7 @@ background-color: #669ec0;
     align-items: baseline;
     background: #fefefe;
     border-bottom: 1px solid #e5e5e5;
-    padding: 29px 72px 30px 72px;
+    padding: 29px 73px 30px 73px;
     box-sizing: border-box;
 }
 .sorting h2 {
@@ -382,16 +626,14 @@ background-color: #669ec0;
     font-size: 21px;
     font-weight: bold;
     line-height: 26px;
-
+    
 }
 .sorting-type{
-	width: 781px;
+	width: 856px;
     font-size: 12px;
 	display: flex;
 }
-.sorting ul {
-	
-}
+
 .sorting-type ul {
 	    display: flex;
     list-style: none;
@@ -426,9 +668,9 @@ background-color: #669ec0;
     color: #81b3d2;
 }
 .sorting-order-buttons {
-    margin-left: auto;
     
-    
+  
+   
     display: flex;
     
     
@@ -466,7 +708,8 @@ background-color: #669ec0;
 .up-button,
 .down-button {
     margin: 0;
-    margin-right: 12px;
+	margin-left: 12px;
+    
     padding: 0;
     background-color: transparent;
     border: 0;
@@ -474,76 +717,168 @@ background-color: #669ec0;
     cursor: pointer;
 }
  
-.catalog {
-	background-color:#ffffff;
-}
-.catalog-item-image {
-	width: 135px;
-	height: 90px;
-}
-.inner-item {
-	color: #000000;
-}
-.inner-item:hover {
-	color: #80b3d2;
-}
-.inner-item:active {
-	color: #c9c9c9;
+.catalog-list {
+    padding: 0;
+    margin: 0;
+    
+    display: flex;
+    
+    flex-direction: column;
+    list-style: none;
 }
 
-.catalog-item-info .button{
-	height: 110px; 
-    width: 27px;
-	background-color: #81b3d2;border: none;
-	font-size: 14px;
-  line-height: 26px;
-  color: #fefefc;
+.catalog-item {
+    padding: 0;
+    margin: 0;
+    min-height: 150px;
+   
+    display: flex;
+    
+    justify-content: flex-start;
+    
+    align-items: center;
+    border-bottom: 1px solid #e5e5e5;
+}
+
+.item-wrapper {
+    min-height: 100px;
+    
+    display: flex;
+    
+    flex-direction: column;
+    margin-right: auto;
+    
+    align-items: stretch;
+    
+   
+}
+
+.catalog-item img {
+    margin-left: 73px;
+    margin-right: 30px;
+}
+
+.item-wrapper h2 {
+    margin: 0;
+    padding-bottom: 7px;
+	text-align: left;
+}
+
+.catalog-item h2 > a {
+    line-height: 26px;
+    color: #000000;
+}
+
+.catalog-item h2 > a:hover,
+.catalog-item h2 > a:focus {
+    color: #81b3d2;
+}
+
+.catalog-item h2 > a:active {
+    color: #b2b2b2;
+}
+
+.catalog-info {
+    
+    display: flex;
+    
+    justify-content: space-between;
+	text-align: left;
+}
+
+.catalog-type,
+.catalog-price {
+    line-height: 21px;
+    margin-bottom: 16px;
+}
+
+.catalog-type {
+    width: 110px;
+}
+
+.catalog-price {
+    width: 142px;
+    margin-left: auto;
+}
+
+.catalog-score {
+    margin-right: 73px;
+    height: 90px;
   
- text-transform: uppercase;
+    display: flex;
+    
+    flex-direction: column;
+   
+    justify-content: space-between;
 }
-.catalog-item-info .button:hover{
-	height: 110px;
-    width: 27px;
-	background-color: #669ec0;
+
+.catalog-rating {
+    width: 110px;
+    height: 26px;
+    text-align: center;
+    vertical-align: middle;
+    color: #666666;
+    background-color: #f2f2f2;
 }
-.catalog-item-info .button:active {
-	color: #93b9d0;
-  background-color: #5596be;
+
+.catalog-actions a {
+    margin: 0;
+    padding: 5px 17px 4px 17px;
 }
-.catalog-item-price a {
-	height: 142px;
-    width: 27px; border: none;
-	font-size: 21px;
-  line-height: 26px;
-  color: #fefefc;
-  
- text-transform: uppercase;
-	background-color: #766357;
+
+.catalog-actions a:first-child {
+    color: #ffffff;
+    background-color: #81b3d2;
+    margin-right: 6px;
 }
-.catalog-item-price a:hover {
-	background-color: #604e43;
+
+.catalog-actions a:last-child {
+    margin-left: -3px;
+    color: #ffffff;
+    background-color: #766357;
 }
-.catalog-item-price a:active {
-	background-color: #503e33;
-	color: #857871;
+
+.catalog-actions a:first-child:hover,
+.catalog-actions a:first-child:focus {
+    background-color: #669ec0;
 }
-.catalog-item-price,
-.catalog-item-info {
-	text-align: center;
+
+.catalog-actions a:last-child:hover,
+.catalog-actions a:last-child:focus {
+    background-color: #604e43;
 }
-.catalog-list {
-	list-style: none;
+
+.catalog-actions a:first-child:active {
+    color: #88b6d1;
+    background-color: #5496bd;
 }
-.rating {
-	text-align: center;
+
+.catalog-actions a:last-child:active {
+    color: #857871;
+    background-color: #503e33;
 }
+
+.catalog-stars {
+   
+    display: flex;
+   
+    justify-content: flex-end;
+}
+
+.catalog-stars img {
+    margin: 0;
+    margin-left: 6px;
+    padding: 0;
+}
+
+
 
 /* ----- Сеточные стили ----- */
 
 html,
 body {
 	min-width: 1280px;
-	min-height: 2762px;
+	min-height: 933px;
 }
 .container  { 
     width: 1200px;
@@ -645,78 +980,7 @@ section {
 	
 }
 
-.catalog {
-	width: 1200px;
-	min-height: 452px;
-	
-}
 
-.catalog-list li {
-	width: 1056 px;
-	height: 91px;
-	display: flex;
-    padding: 25px 32px;
-    border-bottom: 1px solid #e5e5e5;
-	
-}
-.catalog-item-image{
-    width: 165px;
-height: 90px;
-text-align: left;
-background-color: red;
-}
-
-
-.catalog-item-info .button {
-	width: 110px;
-	height: 27px;
-	padding: 3px 17px;
-}
-
-.catalog-item-price
-{display: flex;
-flex-direction:column ; 
-text-align: left;
-	
-	
-}
-
-.catalog-item-price .price {
-	margin-bottom: 16px;
-}
-.catalog-item-price a {
-    width: 142px;
-	height: 27px;
-    padding: 3px 17px; 
-    font-size: 14px;
-    font-weight: bold;
-	text-align: center;
-
-}
-
-
-.rating {
-	height: 97px;
-    width: 110px;
-	text-align: right;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-}
-
-
-.stars img {
-	padding-left: 3px;
-	width: 19px;
-	height: 19px;
-}
-.rating-size {
-	    padding-top: 5px;
-    padding-bottom: 5px;
-    color: #666666;
-    background-color: #f2f2f2;
-    text-align: center;
-}
 
 .main-footer {
 	padding: 60px 0;
